--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,3 +8,10 @@
   margin-top: 50px;
   min-height: 400px;
 }
+
+.buttons{
+  display: flex;
+  gap: 10px;
+  margin-top: 45px;
+  /* border: 3px solid red; */
+}
