--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,17 +1,21 @@
-.form {
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-  border: 1px solid black;
-  margin-top: 50px;
-  min-height: 400px;
+.main {
+	text-align: center;
 }
 
-.buttons{
-  display: flex;
-  gap: 10px;
-  margin-top: 45px;
-  /* border: 3px solid red; */
+.form {
+	width: 400px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: auto;
+	border: 1px solid black;
+	margin-top: 50px;
+	min-height: 400px;
+}
+
+.buttons {
+	display: flex;
+	gap: 10px;
+	margin-top: 45px;
+	/* border: 3px solid red; */
 }
