--- a/styles/Input.module.css
+++ b/styles/Input.module.css
@@ -1,25 +1,23 @@
-
 .container {
-    display: flex;
-    flex-direction: column;
-    column-gap: 10px;
+	display: flex;
+	flex-direction: column;
+	column-gap: 10px;
 }
 
-.container > input[type="text"]{
-    width:  350px;
-    height: 20%;
-    padding: 17px;
-    outline: none;
-    margin-top: 15px;
-    border: 1px black solid;
+.container > input[type='text'] {
+	width: 350px;
+	height: 20%;
+	padding: 17px;
+	outline: none;
+	margin-top: 15px;
+	border: 1px black solid;
 }
 
-.container > input[type="date"]{
-    width: 350px;
-    height: 20%;
-    padding: 17px;
-    outline: none;
-    margin-top: 15px;
-    border: 1px black solid;
-
+.container > input[type='date'] {
+	width: 350px;
+	height: 20%;
+	padding: 17px;
+	outline: none;
+	margin-top: 15px;
+	border: 1px black solid;
 }
