--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,22 @@
 	text-align: center;
 }
 
+.main > section{
+  display: flex;
+  gap: 10px;
+  width: 400px;
+  border: 1px solid grey;
+  justify-content: center;
+  margin: auto;
+  padding: 0.5rem;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.main > section h1 {
+	color: gray;
+}
+
 .form {
 	width: 400px;
 	display: flex;
