--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,16 +3,16 @@
 	width: 100%;
 }
 
-.main > section{
-  display: flex;
-  gap: 10px;
-  width: 400px;
-  border: 1px solid grey;
-  justify-content: center;
-  margin: auto;
-  padding: 0.5rem;
-  margin-top: 15px;
-  cursor: pointer;
+.main > section {
+	display: flex;
+	gap: 10px;
+	width: 500px;
+	border: 1px solid grey;
+	justify-content: center;
+	margin: auto;
+	padding: 0.5rem;
+	margin-top: 15px;
+	/* cursor: pointer; */
 }
 
 .main > section h1 {
