include abilty to mark todo as done or not from the single todo's page

--- a/styles/SingleTodo.module.css
+++ b/styles/SingleTodo.module.css
@@ -14,9 +14,18 @@
 	flex-direction: row;
 }
 
-.todosActionsBox section {
+.todosActionsBox .iconsContainer {
 	margin-top: 1.3rem;
 	margin-left: 20rem;
 	display: flex;
 	gap: 4rem;
+}
+
+.checkbox {
+	transform: scale(1.5);
+}
+
+.todoTitleSection {
+	display: flex;
+	gap: 10px;
 }
