--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -1,10 +1,13 @@
-.button{ 
-    outline: none;
-    width: 150px;
-    height: 40px;
-    padding: 12px;
-    border: none;
-    border-radius: 2px;
-    font-size: 1rem;
-    cursor: pointer;
+.button {
+	outline: none;
+	width: 150px;
+	height: 40px;
+	padding: 12px;
+	border: none;
+	border-radius: 2px;
+	font-size: 1rem;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
