--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -1,10 +1,18 @@
-.button{ 
-    outline: none;
-    width: 150px;
-    height: 40px;
-    padding: 12px;
-    border: none;
-    border-radius: 2px;
-    font-size: 1rem;
-    cursor: pointer;
+.button {
+	outline: none;
+	width: 150px;
+	height: 40px;
+	padding: 12px;
+	border: none;
+	border-radius: 2px;
+	font-size: 1rem;
+	cursor: pointer;
+}
+
+.button:hover {
+	opacity: 0.8;
+}
+
+.button:active {
+	transform: translateY(4px);
 }
