move styles to specific stylesheet, remove error statements after handleCancel event

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -30,6 +30,12 @@
 	min-height: 400px;
 }
 
+.form .errorText {
+	color: red;
+	align-self: flex-start;
+	margin-left: 25px;
+}
+
 .buttons {
 	display: flex;
 	gap: 10px;
