--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 	width: 100%;
 }
 
-.main > section {
+.main > article {
 	display: flex;
 	gap: 10px;
 	width: 550px;
@@ -12,7 +12,7 @@
 	margin: auto;
 	padding: 0.5rem;
 	margin-top: 15px;
-	/* cursor: pointer; */
+	cursor: pointer;
 }
 
 .main > section h1 {
@@ -40,5 +40,4 @@
 	display: flex;
 	gap: 10px;
 	margin-top: 45px;
-	/* border: 3px solid red; */
 }
