--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,20 @@ a {
 body input[type='checkbox'] {
 	cursor: pointer;
 }
+
+.dark-background {
+	background-color: #777373;
+	color: #fefefe;
+}
+
+.dark-background form {
+	border: 1px solid rgb(255, 255, 255);
+}
+
+.dark-background header {
+	background-color: #313134;
+}
+
+.dark-background main article {
+	border: 1px solid #fff;
+}
