--- a/styles/SingleTodo.module.css
+++ b/styles/SingleTodo.module.css
@@ -15,8 +15,8 @@
 }
 
 .todosActionsBox .iconsContainer {
-	margin-top: 1.3rem;
-	margin-left: 15rem;
+	/* margin-top: 1.3rem; */
+	margin-left: 6rem;
 	display: flex;
 	gap: 1.5rem;
 }
