--- a/styles/SingleTodo.module.css
+++ b/styles/SingleTodo.module.css
@@ -12,10 +12,10 @@
 .todosActionsBox {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 }
 
 .todosActionsBox .iconsContainer {
-	/* margin-top: 1.3rem; */
 	margin-left: 6rem;
 	display: flex;
 	gap: 1.5rem;
